# just-image-transformer

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
config/: __init__.py  jit_B_32.yaml  jit_G_32.yaml  jit_H_32.yaml  jit_L_32.yaml
scripts/: inference.sh  server.sh  train.sh
src/jit/: dataset.py  inference.py  model.py  serialization.py  server.py  train.py
src/jit/templates/: index.html
